fix overflow

--- a/header.css
+++ b/header.css
@@ -11,10 +11,6 @@ li {
     list-style: none;
 }
 
-.nav {
-    width: 100%;
-}
-
 /* === NAV MOBILE === */
 .nav-mobile {
     height: 10vh;
